--- a/mainWindow.html
+++ b/mainWindow.html
@@ -19,8 +19,10 @@
                 <option value="appetizer">Appetizers</option>
                 <option value="drinks">Drinks/Dessert</option>
             </select>
-            <select id='empty'>
+            <select id='section'>
+                <option>makirolls</option>
             </select>
+            <!-- TODO: Parse actual files for each of the sections in type -->
         
             <button id="add">Add</button>
             <button id='remove'>Remove</button>
@@ -48,7 +50,9 @@
         add.addEventListener('click', openAddWindow);
 
         function openAddWindow(){
-            const selected = document.getElementById("type").value;
+            const selectedType = document.getElementById("type").value;
+            const selectedSection = document.getElementById("section").value;
+            const selected = new Array(selectedType, selectedSection);
             ipcRenderer.send('add:open', selected);
         }
 
@@ -68,7 +72,7 @@
         const ul = document.querySelector('ul');
         ipcRenderer.on('item:add', function (e, item) {
             const li = document.createElement('li');
-            const itemText = document.createTextNode("Added Item: " + item);
+            const itemText = document.createTextNode("Added Item: " + item[2] + item[3] + item[4]);
             li.appendChild(itemText);
             ul.appendChild(li);
         })
