--- a/addWindow.html
+++ b/addWindow.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
     <title>Document</title>
+    <link rel="stylesheet" href="./index.css">
 </head>
-<body>
+<body class="modify-wrapper">
     <h1></h1>
     <form>
         <div>
