--- a/mainWindow.html
+++ b/mainWindow.html
@@ -1,41 +1,41 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
     <title>Kigaru Web Manager</title>
+    <link rel="stylesheet" href="./index.css">
 </head>
 
-<body>
+<body class="main-wrapper">
     <h1>Kigaru Web Manager</h1>
-    <button id="grab">Grab Kigaru Files</button>
+    <h3 id="status"></h3>
+    <div><button id="grab">Grab Kigaru Files</button>
     <!-- Disable button if certain files exit -->
-    <button id="update">Update Kigaru Files</button>
+    <button id="update">Update Kigaru Files</button></div>
     <!-- Will call a git pull, and after first click say it is updated -->
-    <div>
-        Modify menu:
-        <select id="type">
-                <option value="sushi">Sushi Items</option>
-                <option value="maindish">Main Dishes</option>
-                <option value="appetizer">Appetizers</option>
-                <option value="drinks">Drinks/Dessert</option>
-            </select>
-            <select id='section'>
-                <option>makirolls</option>
-            </select>
-            <!-- TODO: Parse actual files for each of the sections in type -->
-        
-            <button id="add">Add</button>
-            <button id='remove'>Remove</button>
-            <button id="price">Change price</button>
-            <button id="desc">Change description</button>
-            <button id="img">Add image</button>
+    <div></div><div>Modify menu:
+    <select id="type">
+    <option value="sushi">Sushi Items</option>
+    <option value="maindish">Main Dishes</option>
+    <option value="appetizer">Appetizers</option>
+    <option value="drinks">Drinks/Dessert</option>
+    </select>
+    <select id='section'>
+    <option>makirolls</option>
+    </select>
+    <button id="add">Add</button>
+    <button id='remove'>Remove</button>
+    <button id="price">Change price</button>
+    <button id="desc">Change description</button>
+    <button id="img">Add image</button></div>
         
     </div>
-    <div>
-        Added Items:
+    <div>Added Items:
         <ul></ul>
     </div>
-    <button id="submit">Submit all changes</button>
+    <div><button id="simulate">Simulate</button>
+    <button id="submit">Submit all changes</button></div>
 
     <script>
 
@@ -85,15 +85,44 @@
 
 
 
+        h3 = document.querySelector('#status');
 
         //Grab Kigaru Files button
         const grab = document.querySelector('#grab');
         grab.addEventListener('click', gitCall);
 
-        function gitCall() {
-            exec('git clone https://github.com/mark-huynh/kigaruweb.git && cd kigaruweb && npm install')
+        async function gitCall() {
+            h3.innerHTML = "Grabbing files..."
+            await exec('git clone https://github.com/mark-huynh/kigaruweb.git && cd kigaruweb && npm install');
+            h3.innerHTML = "Done! Files are installed."
+            setTimeout(function(){
+                h3.innerHTML = "";
+            }, 10000);
         }
 
+        //Update Kigaru Files button
+        const update = document.querySelector('#update');
+        update.addEventListener('click', gitPull);
+
+        async function gitPull() {
+            h3.innerHTML = "Updating files..."
+            await exec('cd kigaruweb && git pull');
+            h3.innerHTML = "Done! Files are updated."
+            setTimeout(function(){
+                h3.innerHTML = "";
+            }, 10000);
+        }
+
+
+
+        //Simulate webpage
+        const simulate = document.querySelector('#simulate');
+        simulate.addEventListener('click', startServer);
+
+        async function startServer(){
+            //TODO: kill everything that is on port 3000 already
+            await exec("cd kigaruweb && npm start");
+       }
 
         //Adding info to UL
         const ul = document.querySelector('ul');
@@ -120,6 +149,13 @@
             const itemText = document.createTextNode("Changed Item Description: " + item[1] + " to " + item[2] + " from " + item[0]);
             li.appendChild(itemText);
             ul.appendChild(li);
+        })
+
+
+        //submit everything
+        const submit = document.querySelector('#submit');
+        submit.addEventListener('click', () => {
+            ipcRenderer.send('finalSubmit');
         })
     </script>
 </body>
