--- a/modifyWindow.html
+++ b/modifyWindow.html
@@ -3,9 +3,10 @@
 
 <head>
     <title>Document</title>
+    <link rel="stylesheet" href="./index.css">
 </head>
 
-<body>
+<body class='modify-wrapper'>
     <h1></h1>
     <form>
         <div id="input-area">
