--- a/addWindow.html
+++ b/addWindow.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Document</title>
+    <title>Add Item</title>
     <link rel="stylesheet" href="./index.css">
 </head>
 <body class="modify-wrapper">
