--- a/modifyWindow.html
+++ b/modifyWindow.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Document</title>
+    <title>Modify Item</title>
     <link rel="stylesheet" href="./index.css">
 </head>
 
