Fixed picture bug and fixed deploy

--- a/mainWindow.html
+++ b/mainWindow.html
@@ -327,6 +327,12 @@
         submit.addEventListener('click', () => {
             ipcRenderer.send('finalSubmit');
         })
+
+        ipcRenderer.on('disable', function () {
+            disableAllButtons();
+        }
+        );
+
     </script>
 </body>
 
